added base templates

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,12 +11,12 @@ block body
         p This project is just a collection of examples that use Redux in the back and different template frameworks in the front
 
     .list-group
-      a(href='/angular').list-group-item
+      a(href='angular.html').list-group-item
         h4.list-group-item-heading Angular 1
         p.list-group-item-text Uses pug templates and built in ES6
-      a(href='/react').list-group-item
+      a(href='react.html').list-group-item
         h4.list-group-item-heading React
         p.list-group-item-text Uses JSX with Redux as the state machine
-      a(href='/vanilla').list-group-item
+      a(href='vanilla.html').list-group-item
         h4.list-group-item-heading Vanilla JS
         p.list-group-item-text Apart from using ES6 though...
