--- a/src/pug/import/_base.pug
+++ b/src/pug/import/_base.pug
@@ -2,7 +2,7 @@ block vars
 doctype
 html
   head
-    meta(name="viewport" content="width=device-width, initial-scale=1")
+    meta(name='viewport' content='width=device-width, initial-scale=1')
     title #{title}
 
   body
