--- a/src/pug/vanilla.pug
+++ b/src/pug/vanilla.pug
@@ -12,3 +12,5 @@ block body
         .btn-group
           button#increment.btn.btn-default +
           button#decrement.btn.btn-default -
+
+  script(src='vanilla.js')
