--- a/src/pug/import/_base.pug
+++ b/src/pug/import/_base.pug
@@ -3,6 +3,8 @@ doctype
 html
   head
     meta(name='viewport' content='width=device-width, initial-scale=1')
+    link(rel="stylesheet" href="bootstrap.min.css")
+    link(rel="stylesheet" href="bootstrap-theme.min.css")
     title #{title}
 
   body
