--- a/src/pug/vanilla.pug
+++ b/src/pug/vanilla.pug
@@ -10,7 +10,7 @@ block body
         input#count.form-control.input-lg
       .col-xs-4
         .btn-group
-          button#increment.btn.btn-default +
-          button#decrement.btn.btn-default -
+          button#increment.btn.btn-default.btn-lg +
+          button#decrement.btn.btn-default.btn-lg -
 
   script(src='vanilla.js')
