changed base link

--- a/src/pug/import/_base.pug
+++ b/src/pug/import/_base.pug
@@ -11,7 +11,7 @@ html
     .navbar.navbar-default
       .container
         .navbar-header
-          a.navbar-brand(href="/") Redux Counter
+          a.navbar-brand(href="index.html") Redux Counter
         ul.nav.navbar-nav
           each example in ['Angular', 'React', 'Vanilla']
             li
