--- a/src/pug/angular.pug
+++ b/src/pug/angular.pug
@@ -13,4 +13,9 @@ block body
           button.btn.btn-default.btn-lg(ng-click='increment($event)') +
           button.btn.btn-default.btn-lg(ng-click='decrement($event)') -
 
+      .row
+        .col-xs-12
+          h3 Source code
+          <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/angular/app.js"></script>
+
   script(src='angular.js')
