--- a/src/pug/react.pug
+++ b/src/pug/react.pug
@@ -5,5 +5,9 @@ block vars
 
 block body
   #app.container
-    
+  .container
+    .row
+      .col-xs-12
+        h3 Source code
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/react/app.js"></script>
   script(src='react.js')
