--- a/src/pug/vanilla.pug
+++ b/src/pug/vanilla.pug
@@ -13,4 +13,9 @@ block body
           button#increment.btn.btn-default.btn-lg +
           button#decrement.btn.btn-default.btn-lg -
 
+    .row
+      .col-xs-12
+        h3 Source code
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/vanilla/app.js"></script>
+
   script(src='vanilla.js')
