--- a/src/pug/angular2.pug
+++ b/src/pug/angular2.pug
@@ -4,6 +4,7 @@ block vars
   - var title = 'Redux Counter Examples: Angular 2'
 
 block body
-  app.container
+  .container
+    app
 
   script(src='angular2.js')
