--- a/src/pug/react.pug
+++ b/src/pug/react.pug
@@ -9,5 +9,5 @@ block body
     .row
       .col-xs-12
         h3 Source code
-        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/react/app.js"></script>
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/react/app.jsx"></script>
   script(src='react.js')
