--- a/src/pug/vanilla.pug
+++ b/src/pug/vanilla.pug
@@ -13,6 +13,7 @@ block body
           button#increment.btn.btn-default.btn-lg +
           button#decrement.btn.btn-default.btn-lg -
 
+  .container
     .row
       .col-xs-12
         h3 Source code
