--- a/src/pug/angular.pug
+++ b/src/pug/angular.pug
@@ -12,10 +12,11 @@ block body
         counter-buttons.btn-group
           button.btn.btn-default.btn-lg(ng-click='increment($event)') +
           button.btn.btn-default.btn-lg(ng-click='decrement($event)') -
-
-      .row
-        .col-xs-12
-          h3 Source code
-          <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/angular/app.js"></script>
+    
+  .container
+    .row
+      .col-xs-12
+        h3 Source code
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/angular/app.js"></script>
 
   script(src='angular.js')
