--- a/src/pug/vue.pug
+++ b/src/pug/vue.pug
@@ -13,9 +13,10 @@ block body
           button.btn.btn-default.btn-lg(v-on:click='increment') +
           button.btn.btn-default.btn-lg(v-on:click='decrement') -
 
-      .row
-        .col-xs-12
-          h3 Source code
-          <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/vue/app.js"></script>
+  .container
+    .row
+      .col-xs-12
+        h3 Source code
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/vue/app.js"></script>
 
   script(src='vue.js')
