--- a/src/pug/angular2.pug
+++ b/src/pug/angular2.pug
@@ -6,5 +6,15 @@ block vars
 block body
   .container
     app
+    
+  .container
+    .row
+      .col-xs-12
+        h3 Source code
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/angular2/app.ts"></script>
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/angular2/module.ts"></script>
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/angular2/app.component.ts"></script>
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/angular2/buttons.component.ts"></script>
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/angular2/counter.component.ts"></script>
 
   script(src='angular2.js')
