--- a/src/pug/import/_examples.pug
+++ b/src/pug/import/_examples.pug
@@ -1,2 +1,2 @@
 block vars
-  - var examples = ['Angular', 'Angular 2', 'React', 'Vanilla', 'Vue']
+  - var examples = ['Angular', 'Angular 2', 'Aurelia', 'React', 'Vanilla', 'Vue']
