--- a/src/pug/react.pug
+++ b/src/pug/react.pug
@@ -11,5 +11,7 @@ block body
       .col-xs-12
         h3 Source code
         <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/react/app.jsx"></script>
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/react/buttons.component.jsx"></script>
+        <script src="https://gist-it.appspot.com/github/ahmednuaman/redux-counter/blob/master/src/js/react/counter.component.jsx"></script>
         
   script(src='react.js')
